<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#f3f1f1"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:background="@null"
                android:src="@drawable/setting_gear" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/setting"
                android:textColor="#000"
                android:textSize="28sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#000" />

        <LinearLayout style="@style/settingDialogItemBase">

            <TextView
                android:id="@+id/item1"
                style="@style/settingDialogDescriptionStyle"
                android:text="@string/settingItem1" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/check_box"
                android:button="@null" />

        </LinearLayout>

        <LinearLayout style="@style/settingDialogItemBase">

            <TextView
                android:id="@+id/item2"
                style="@style/settingDialogDescriptionStyle"
                android:text="@string/settingItem2" />

            <EditText
                android:id="@+id/edtTime"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:padding="0dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="2dp"
                android:text="@string/sec"
                android:textColor="#000"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            style="@style/settingDialogItemBase"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/item3"
                style="@style/settingDialogDescriptionStyle"
                android:text="@string/settingItem3" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/check_box"
                android:button="@null" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn1"
            style="@style/settingBtnStyle"
            android:background="@drawable/s_btn_common_dialog_btn2">

            <TextView
                android:id="@+id/txtBtn1"
                style="@style/settingBtnTextStyle"
                android:text="@string/showGuide" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn2"
            style="@style/settingBtnStyle"
            android:background="@drawable/s_btn_common_dialog_btn1">

            <TextView
                android:id="@+id/txtBtn2"
                style="@style/settingBtnTextStyle"
                android:text="@string/confirm" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>