<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="9dp"
    android:layout_gravity="end"
    android:layout_width="100dp"
    android:layout_height="133dp"
    android:background="@drawable/s_btn_main1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/main_circle">

            <TextView
                android:id="@+id/txtBtn3Size"
                style="@style/mainBtnTextStyle"
                android:layout_marginTop="18dp"
                android:text="@string/type3Size"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/txtBtn3Size2"
                style="@style/mainBtnTextStyle"
                android:layout_marginTop="1dp"
                android:text="@string/mm"
                android:textSize="7sp"/>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtBtn3Name"
        style="@style/mainBtnTextNameStyle"
        android:layout_marginBottom="30dp"
        android:textSize="13sp"
        android:text="@string/type3Name"/>

</LinearLayout>