<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:background="#f0eeee"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="34dp"
                android:text="@string/sizeDialogTitle"
                android:textColor="#000"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtWidth"
                        style="@style/textSizeDialogStyle"
                        android:text="@string/width" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="13dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="8dp"
                            android:background="@drawable/line_width" />

                        <EditText
                            android:id="@+id/edtWidth"
                            style="@style/editTextSizeDialogStyle"
                            android:layout_width="match_parent" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtHeight"
                        style="@style/textSizeDialogStyle"
                        android:text="@string/height" />

                    <EditText
                        android:id="@+id/edtHeight"
                        style="@style/editTextSizeDialogStyle"
                        android:layout_width="0dp"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/line_height" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/txtPrevious"
                        style="@style/textSizeDialogUsedParaStyle"
                        android:text="@string/previousUsage" />

                    <TextView
                        android:id="@+id/txtPreviousValue"
                        style="@style/textSizeDialogUsedParaStyle"
                        android:layout_marginLeft="15dp"
                        android:text="@string/none" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="24dp"
                android:text="@string/userSizeRule"
                android:textColor="#ea8f8f"
                android:textSize="15sp" />


            <LinearLayout
                android:id="@+id/confirm"
                style="@style/sizeDialogBtnStyle"
                android:background="@drawable/s_size_dialog_confim">

                <TextView
                    android:id="@+id/txtConfirm"
                    style="@style/sizeDialogBtnTextStyle"
                    android:text="@string/confirm" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancel"
                style="@style/sizeDialogBtnStyle"
                android:background="@drawable/s_size_dialog_cancel"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/txtCancel"
                    style="@style/sizeDialogBtnTextStyle"
                    android:text="@string/cancel" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>